<resources>
    //Login
    <string name="app_name">Blade Clicker</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="username_hint">Username goes here...</string>
    <string name="password_hint">Password goes here...</string>
    <string name="go_register_link">Don\'t have account click here</string>
    <string name="login_btn">Login</string>
    <string name="guest_btn">Guest</string>

    //Register
    <string name="password_confirmation_hint">Please confirm your password...</string>
    <string name="email_hint">Email goes here...</string>
    <string name="btn_submit_regis">Register</string>
    <string name="main_logo">Logo</string>

    //Main Page
    <string name="score_label_game_home">Score:</string>
    <string name="button_shop_game_home">Shop</string>
    <string name="button_achievements_game_home">Achievements</string>
    <string name="button_stats_game_home">Stats</string>
    <string name="button_settings_game_home">Achievements</string>

    //Rock, Paper, Scissors
    <string name="button_rock">Rock</string>
    <string name="button_paper">Paper</string>
    <string name="button_scissors">Scissors</string>

    //Achievements
    <string name="button_shop_achievements">Shop</string>
    <string name="button_achievements_achievements">Achievements</string>
    <string name="button_stats_achievements">Stats</string>
    <string name="achievement_1">1000 pontos</string>
    <string name="achievement_2">10000 pontos</string>
    <string name="achievement_3">Primeiros Passos...</string>
    <string name="achievement_3_descri">Conseguir a primeira melhoria</string>
    <string name="achievement_4">Upado ao Maximo</string>
    <string name="achievement_4_descri">Conseguir todas as melhorias</string>

    //Stats
    <string name="button_shop_stats">Shop</string>
    <string name="button_achievements_stats">Achievements</string>
    <string name="button_stats_stats">Stats</string>
    <string name="stats_1">Stats 1</string>
    <string name="stats_2">Stats 2</string>
    <string name="stats_3">Stats 3</string>
    <string name="stats_4">Stats 4</string>


    //Shop
    <string name="button_shop_shop">Shop</string>
    <string name="button_achievements_shop">Achievements</string>
    <string name="button_stats_shop">Stats</string>
    <string name="shop_upgrade_1">Melhoria de Espada</string>
    <string name="shop_upgrade_description_1">Melhora a espada, ganha mais pontos a cada toque</string>
    <string name="shop_upgrade_2">Melhoria Física</string>
    <string name="shop_upgrade_description_2">O número de toques no ecrã faz com que o multiplicador de pontos aumente</string>
    <string name="shop_upgrade_3">Melhoria de itens</string>
    <string name="shop_upgrade_description_3">Os minijogos dão mais pontos</string>


    //Settings
    <string name="username_config_label">Username:</string>
    <string name="provisory_text">loren ipsum</string>
    <string name="audio_settings_label">Audio Settings</string>
    <string name="music_label">Music</string>
    <string name="sound_label">Sound</string>
    <string name="restore_purchases_label">Restore purchases</string>
</resources>