<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity_achievements">

    <ImageButton
        android:id="@+id/button_settings_achievements"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginStart="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gear_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="392dp"
        android:layout_height="610dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/achievement_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/achievement_1"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/achievement_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/achievement_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/achievement_2"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/achievement_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievement_1" />

        <TextView
            android:id="@+id/achievement_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/achievement_3"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/achievement_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievement_2" />

        <TextView
            android:id="@+id/achievement_3_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/achievement_3_descri"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievement_3" />

        <TextView
            android:id="@+id/achievement_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="76dp"
            android:text="@string/achievement_4"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/achievement_4_description"
            android:layout_width="362dp"
            android:layout_height="61dp"
            android:text="@string/achievement_4_descri"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievement_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_shop_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_shop_achievements" />

        <Button
            android:id="@+id/button_achievements_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_achievements_achievements" />

        <Button
            android:id="@+id/button_stats_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_stats_achievements" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_go_back_achievements_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>