<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D39F03"
    tools:context=".Configurations_Activity">

    <Button
        android:id="@+id/go_back_configuration_button"
        android:layout_width="84dp"
        android:layout_height="65dp"
        android:layout_marginEnd="350dp"
        android:background="#00FFFFFF"
        app:icon="@android:drawable/ic_media_previous"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="363dp"
        android:layout_height="531dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/username_settings_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/username_config_label"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/username_name_configuration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provisory_text"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="360dp"
                android:layout_height="35dp"
                android:text="@string/audio_settings_label"
                android:textColor="#0D0D0D"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="360dp"
            android:layout_height="90dp">

            <Switch
                android:id="@+id/music_configuration_button"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:text="@string/music_label"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Switch
                android:id="@+id/sound_configuration_button2"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:text="@string/sound_label"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_purchases_label"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>