<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_forest"
    tools:context=".Register_Activity">

    <ImageButton
        android:id="@+id/go_back_regiter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="364dp"
        android:layout_height="232dp"
        android:layout_marginTop="200dp"
        android:background="#DFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_register_textbox"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email_register_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/password_register_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/password_confirmation_register_textbox"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_confirmation_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/submit_regist_button"
        android:layout_width="145dp"
        android:layout_height="83dp"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_submit_regis"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>