<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Rock_Paper_Scissors_Activity">

    <ImageButton
        android:id="@+id/rock_button_rock_paper_scissors"
        android:layout_width="178dp"
        android:layout_height="158dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_rock"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fist" />

    <ImageButton
        android:id="@+id/paper_button_rock_paper_scissors"
        android:layout_width="178dp"
        android:layout_height="158dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_paper"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/rock_button_rock_paper_scissors"
        app:layout_constraintStart_toStartOf="@+id/rock_button_rock_paper_scissors"
        app:layout_constraintTop_toBottomOf="@+id/rock_button_rock_paper_scissors"
        app:srcCompat="@android:drawable/alert_dark_frame"
        tools:srcCompat="@drawable/scroll" />

    <ImageButton
        android:id="@+id/scissors_button_rock_paper_scissors"
        android:layout_width="178dp"
        android:layout_height="158dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_scissors"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/paper_button_rock_paper_scissors"
        app:layout_constraintStart_toStartOf="@+id/paper_button_rock_paper_scissors"
        app:layout_constraintTop_toBottomOf="@+id/paper_button_rock_paper_scissors"
        app:srcCompat="@drawable/scissor" />
</androidx.constraintlayout.widget.ConstraintLayout>